<resources>
    <string name="app_name">WanAndroid-MVVM</string>
    <string name="nav_home">home</string>
    <string name="nav_square">square</string>
    <string name="nav_wechat">wechat</string>
    <string name="nav_project">project</string>
    <string name="nav_me">me</string>
    <string name="state_tx_loading">loading</string>
    <string name="state_tx_error">Failed to load,please click to retry.</string>
    <string name="tx_retry">retry</string>
    <string name="state_tx_empty">The data is empty.</string>
    <string name="tv_new">new</string>
    <string name="tv_up">up</string>
    <string name="system_tx">System</string>
    <string name="guide_tx">Guide</string>
    <string name="my_score">my_score</string>
    <string name="now_score_text">now_score:</string>
    <string name="my_college">my college</string>
    <string name="my_share">my share</string>

    <string name="network_error_txt">Network is unavailable</string>

    <string name="text_out_login">Not logged in</string>
    <string name="register">Register</string>
    <string name="login">Log in</string>
    <string name="please_login">Please input username</string>
    <string name="please_pwd">Please input password</string>
    <string name="please_repwd">Please input password again</string>
    <string name="clean_cache">clean_cache</string>
    <string name="log_out">Log out</string>
    <string name="my_score_text">my score</string>
    <string name="clear_cache">clear cache</string>
    <string name="clear_cache_content">whether to clear the cache?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="clear_loading">Cleaning up cache. Please wait...</string>
    <string name="add_title_hint">文章标题(100字以内)</string>
    <string name="article_title">文章标题</string>
    <string name="article_link">文章链接</string>
    <string name="link_eg">如 http://wanandroid.com/blog/show/2577</string>


</resources>