<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray">

    <include
        android:id="@+id/header_layout"
        layout="@layout/view_me_header"
        android:layout_width="0dp"
        android:layout_height="230dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_layout"
        app:layout_constraintBottom_toTopOf="@id/tv_logout"
        >

        <ImageView
            android:id="@+id/iv_icon2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/me_item_pad"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toTopOf="@+id/iv_icon_3"
            app:layout_constraintEnd_toEndOf="@id/iv_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_icon"
            app:srcCompat="@drawable/baseline_favorite_border_24" />

        <TextView
            android:id="@+id/tv_my_college"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:padding="@dimen/me_item_pad"
            android:text="@string/my_college"
            android:textColor="@color/black"
            android:textSize="@dimen/item_article_title_font_size"
            app:layout_constraintBottom_toBottomOf="@+id/iv_icon2"
            app:layout_constraintEnd_toStartOf="@+id/iv_right2"
            app:layout_constraintStart_toStartOf="@+id/tv_my_score"
            app:layout_constraintTop_toTopOf="@+id/iv_icon2" />

        <ImageView
            android:id="@+id/iv_right2"
            android:layout_width="50dp"
            android:layout_height="0dp"
            android:padding="6dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_my_college"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_my_college"
            app:layout_constraintTop_toTopOf="@+id/tv_my_college"
            app:srcCompat="@drawable/baseline_keyboard_arrow_right_24" />

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/me_item_pad"
            app:layout_constraintBottom_toTopOf="@+id/iv_icon2"
            app:layout_constraintEnd_toStartOf="@+id/tv_my_score"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/score" />

        <TextView
            android:id="@+id/tv_my_score"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/my_score"
            android:textColor="@color/black"
            android:textSize="@dimen/item_article_title_font_size"
            android:padding="@dimen/me_item_pad"
            android:gravity="center_vertical"
            android:maxLines="1"
            app:layout_constraintBottom_toBottomOf="@+id/iv_icon"
            app:layout_constraintEnd_toStartOf="@+id/tv_now_score"
            app:layout_constraintStart_toEndOf="@+id/iv_icon"
            app:layout_constraintTop_toTopOf="@+id/iv_icon"/>

        <TextView
            android:id="@+id/tv_now_score"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:padding="@dimen/me_item_pad"
            app:layout_constraintBottom_toBottomOf="@+id/tv_my_score"
            app:layout_constraintEnd_toStartOf="@+id/iv_right"
            app:layout_constraintStart_toEndOf="@+id/tv_my_score"
            app:layout_constraintTop_toTopOf="@id/tv_my_score"
            tools:text="当前积分：1208" />

        <ImageView
            android:id="@+id/iv_right"
            android:layout_width="50dp"
            android:layout_height="0dp"
            android:padding="6dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_now_score"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_now_score"
            app:layout_constraintTop_toTopOf="@+id/tv_now_score"
            app:srcCompat="@drawable/baseline_keyboard_arrow_right_24" />

        <ImageView
            android:id="@+id/iv_icon_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="@dimen/me_item_pad"
            app:layout_constraintBottom_toBottomOf="@id/iv_icon_github"
            app:layout_constraintEnd_toEndOf="@id/iv_icon2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_icon2"
            app:srcCompat="@drawable/baseline_share_24" />

        <TextView
            android:id="@+id/tv_share"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:padding="@dimen/me_item_pad"
            android:text="@string/my_share"
            android:textColor="@color/black"
            android:textSize="@dimen/item_article_title_font_size"
            app:layout_constraintBottom_toBottomOf="@+id/iv_icon_3"
            app:layout_constraintEnd_toEndOf="@+id/tv_my_college"
            app:layout_constraintStart_toStartOf="@+id/tv_my_college"
            app:layout_constraintTop_toTopOf="@+id/iv_icon_3" />

        <ImageView
            android:id="@+id/iv_share"
            android:layout_width="50dp"
            android:layout_height="0dp"
            android:padding="6dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_share"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_share"
            app:layout_constraintTop_toTopOf="@id/tv_share"
            app:srcCompat="@drawable/baseline_keyboard_arrow_right_24" />


        <ImageView
            android:id="@+id/iv_icon_github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/me_item_pad"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_clean_cache"
            app:layout_constraintStart_toStartOf="@+id/iv_icon_3"
            app:layout_constraintTop_toBottomOf="@id/iv_icon_3"
            app:srcCompat="@drawable/clean" />

        <TextView
            android:id="@+id/tv_clean_cache"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:padding="@dimen/me_item_pad"
            android:text="@string/clean_cache"
            android:textColor="@color/black"
            android:textSize="@dimen/item_article_title_font_size"
            app:layout_constraintBottom_toBottomOf="@+id/iv_icon_github"
            app:layout_constraintEnd_toStartOf="@+id/tv_cache_size"
            app:layout_constraintStart_toEndOf="@+id/iv_icon_github"
            app:layout_constraintStart_toStartOf="@+id/tv_share"
            app:layout_constraintTop_toTopOf="@+id/iv_icon_github" />

        <TextView
            android:id="@+id/tv_cache_size"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="0MB"
            app:layout_constraintBottom_toBottomOf="@id/tv_clean_cache"
            app:layout_constraintEnd_toStartOf="@id/iv_clear"
            app:layout_constraintStart_toEndOf="@id/tv_clean_cache"
            app:layout_constraintTop_toTopOf="@id/tv_clean_cache" />

        <ImageView
            android:id="@+id/iv_clear"
            android:layout_width="50dp"
            android:layout_height="0dp"
            android:padding="6dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_clean_cache"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_cache_size"
            app:layout_constraintTop_toTopOf="@+id/tv_cache_size"
            app:srcCompat="@drawable/baseline_keyboard_arrow_right_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout"
        android:text="@string/log_out"
        android:textColor="@color/main_color"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="25dp"
        android:background="@color/white"/>
</androidx.constraintlayout.widget.ConstraintLayout>